--- a/Final Project (Python).ipynb
+++ b/Final Project (Python).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
        "[150930 rows x 10 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,27 +1210,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[150930, 137235, 137235, 136334, 134711, 111009]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "regions = df['region_1'].unique()\n",
-    "region_count=[]\n",
-    "regions_kept = []\n",
-    "for i in range(0,len(regions)):\n",
-    "    region_count.append(len(df.loc[df['region_1'] == regions[i]]))\n",
-    "for j in range(0,len(regions)):\n",
-    "    if region_count[j]>10:\n",
-    "        regions_kept.append(regions[j])\n",
-    "df = df[df['region_1'].isin(regions_kept)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "size = []\n",
+    "size.append(len(df))\n",
+    "df = df[np.isfinite(df['price'])]\n",
+    "size.append(len(df))\n",
+    "df = df[np.isfinite(df['points'])]\n",
+    "size.append(len(df))\n",
+    "\n",
     "countries = df['country'].unique()\n",
     "country_count=[]\n",
     "countries_kept = []\n",
@@ -1240,9 +1241,7 @@
     "    if country_count[j]>150:\n",
     "        countries_kept.append(countries[j])\n",
     "df = df[df['country'].isin(countries_kept)]\n",
-    "\n",
-    "df = df[np.isfinite(df['price'])]\n",
-    "df = df[np.isfinite(df['points'])]\n",
+    "size.append(len(df))\n",
     "\n",
     "amount_of_varieties = len(df['variety'].unique())\n",
     "varietal = df['variety'].unique()\n",
@@ -1253,7 +1252,20 @@
     "    if len(df.loc[df['variety'] == varietal[i]]) > Tol:\n",
     "        amount_of_each_variety.append(len(df.loc[df['variety'] == varietal[i]]))\n",
     "        varietals.append(varietal[i])\n",
-    "df = df[df['variety'].isin(varietals)]"
+    "df = df[df['variety'].isin(varietals)]\n",
+    "size.append(len(df))\n",
+    "\n",
+    "regions = df['region_1'].unique()\n",
+    "region_count=[]\n",
+    "regions_kept = []\n",
+    "for i in range(0,len(regions)):\n",
+    "    region_count.append(len(df.loc[df['region_1'] == regions[i]]))\n",
+    "for j in range(0,len(regions)):\n",
+    "    if region_count[j]>10:\n",
+    "        regions_kept.append(regions[j])\n",
+    "df = df[df['region_1'].isin(regions_kept)]\n",
+    "size.append(len(df))\n",
+    "size"
    ]
   },
   {
@@ -1265,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2097,7 +2109,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>111244 rows × 10 columns</p>\n",
+       "<p>111009 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2416,10 +2428,10 @@
        "150928                   Gosset  \n",
        "150929            Alois Lageder  \n",
        "\n",
-       "[111244 rows x 10 columns]"
+       "[111009 rows x 10 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2437,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2451,7 +2463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -2461,14 +2473,14 @@
     "    m1 = metrics.mean_absolute_error(y_true, y_pred)\n",
     "    m2 = metrics.median_absolute_error(y_true,y_pred)\n",
     "    m3 = metrics.explained_variance_score(y_true,y_pred)\n",
-    "    m4 = metrics.r2_score\n",
-    "    print(\"Mean Absolute Error:\",m1,\"| Median Absolute Error:\", m2,\"| Explain Variance Score:\", m3,\"| R2 Score:\",m4)\n",
+    "    m4 = metrics.r2_score(y_true,y_pred)\n",
+    "    #print(\"Mean Absolute Error:\",m1,\"| Median Absolute Error:\", m2,\"| Explain Variance Score:\", m3,\"| R2 Score:\",m4)\n",
     "    return m1,m2,m3,m4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -2504,8 +2516,8 @@
     "        X = np.c_[X,variety[j]]\n",
     "    for j in range(0,len(region)):\n",
     "        X = np.c_[X,region[j]]\n",
-    "    X = np.c_[X,sent_sums]\n",
-    "    X = np.c_[X,sent_prob]\n",
+    "#    X = np.c_[X,sent_sums]\n",
+    "#    X = np.c_[X,sent_prob]\n",
     "    X = np.c_[X,np.ones(len(df['points']))]\n",
     "    return X"
    ]
@@ -2519,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -2534,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -2555,7 +2567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -2570,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -2584,13 +2596,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def Wine_Huber_Tree_Regression(Xtrain, Xtest, Ytrain):\n",
+    "    htr = sklearn.ensemble.GradientBoostingRegressor(loss='huber')\n",
+    "    htr = htr.fit(Xtrain, Ytrain)\n",
+    "    return htr.predict(Xtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def Wine_Ls_Tree_Regression(Xtrain, Xtest, Ytrain):\n",
     "    htr = sklearn.ensemble.GradientBoostingRegressor(loss='ls')\n",
     "    htr = htr.fit(Xtrain, Ytrain)\n",
     "    return htr.predict(Xtest)"
@@ -2605,7 +2631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2624,7 +2650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -2636,9 +2662,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "all the input array dimensions except for the concatenation axis must match exactly",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-68-64c7ef93bdce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTransform_df_to_X\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'price'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-59-a5b692f55a03>\u001b[0m in \u001b[0;36mTransform_df_to_X\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mregion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mregion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m     \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msent_sums\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m     \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msent_prob\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'points'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/numpy/lib/index_tricks.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    338\u001b[0m                 \u001b[0mobjs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobjs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfinal_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 340\u001b[0;31m         \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobjs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    341\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    342\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: all the input array dimensions except for the concatenation axis must match exactly"
+     ]
+    }
+   ],
    "source": [
     "X = Transform_df_to_X(df)\n",
     "data = X\n",
@@ -2647,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -2666,20 +2706,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.52097272672305839"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "R2_score((Wine_Decision_Tree_Regression(X_train,X_test,y_train)),y_test)"
    ]
@@ -2693,7 +2722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -2712,7 +2741,12 @@
     "        y_pred = model(train_data_input, test_data_input, train_data_output)\n",
     "        m1,m2,m3,m4 = report_metrics(y_pred, y_te)\n",
     "        scores_m1.append(m1)\n",
-    "    return np.mean(scores)"
+    "        scores_m2.append(m2)\n",
+    "        scores_m3.append(m3)\n",
+    "        scores_m4.append(m4)\n",
+    "        print(\"Mean Absolute Error:\",m1,\"| Median Absolute Error:\", m2,\"| Explain Variance Score:\", m3,\"| R2 Score:\",m4)\n",
+    "    print(\"Average Mean Absolute Error:\",np.mean(scores_m1),\"| Average Median Absolute Error:\", np.mean(scores_m2),\"| Average Explain Variance Score:\", np.mean(scores_m3),\"| Average R2 Score:\",np.mean(scores_m4))\n",
+    "    return np.mean(scores_m1),np.mean(scores_m2),np.mean(scores_m3),np.mean(scores_m4)"
    ]
   },
   {
@@ -2724,72 +2758,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.525412447572\n",
-      "-14497263824.8\n",
-      "-1.99050886622e+15\n",
-      "0.465928065788\n",
-      "0.445284613321\n",
-      "0.40141297576\n",
-      "-9.78971130838e+13\n",
-      "0.382128290783\n",
-      "-659376895422.0\n",
-      "0.413046996606\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-208907985346048.91"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_cv(Wine_LinLstSq_Regression)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.221482064427\n",
-      "0.137945465855\n",
-      "0.194335022336\n",
-      "0.247014392574\n",
-      "0.20276116814\n",
-      "0.179231145496\n",
-      "0.228518428829\n",
-      "0.130022343738\n",
-      "0.236034703214\n",
-      "0.16623085918\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.19435755937888269"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_cv(Wine_Huber_Linear_Regression)"
    ]
@@ -2807,34 +2787,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.485123927596\n",
-      "0.469803494921\n",
-      "0.288900832881\n",
-      "0.417314395896\n",
-      "0.566034518136\n",
-      "0.609279897428\n",
-      "0.573065085297\n",
-      "0.523936607023\n",
-      "0.510202904708\n",
-      "0.556083086162\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.4999744750048068"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_cv(Wine_Decision_Tree_Regression)"
    ]
@@ -2845,31 +2798,23 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.653489398535\n",
-      "0.489712223622\n",
-      "0.632240060847\n",
-      "0.572022477462\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_cv(Wine_Random_Forest_Regression)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "test_cv(Wine_Huber_Tree_Regression)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "test_cv(Wine_Ls_Tree_Regression)"
    ]
   },
   {
@@ -2880,12 +2825,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "test_cv(Wine_SVM_Regression)"
    ]
@@ -2915,8 +2856,9 @@
     "    #for i in range(0,len(y_pred)):\n",
     "    #print(\"Guess:\",y_pred[i],\"Actual:\",y_train[i])\n",
     "    #score = metrics.mean_absolute_error(y_test,y_pred)\n",
-    "    score  = R2_score(y_pred,y_test)\n",
-    "    return score"
+    "    m1,m2,m3,m4 = report_metrics(y_pred, y_test)\n",
+    "    print(\"Mean Absolute Error:\",m1,\"| Median Absolute Error:\", m2,\"| Explain Variance Score:\", m3,\"| R2 Score:\",m4)\n",
+    "    return m1,m2,m3,m4"
    ]
   },
   {
@@ -2929,9 +2871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_score(Wine_LinLstSq_Regression)"
@@ -2940,9 +2880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_score(Wine_Huber_Linear_Regression)"
@@ -2974,12 +2912,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "test_score(Wine_Huber_Tree_Regression)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "test_score(Wine_Ls_Tree_Regression)"
    ]
   },
   {
@@ -2990,12 +2933,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "test_score(Wine_SVM_Regression)"
    ]
