new sentiment vectors

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -43,18 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(\"df2\")"
+    "df = pd.read_pickle(\"df3\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -62,10 +62,10 @@
     {
      "data": {
       "text/plain": [
-       "(111244, 10)"
+       "(111009, 10)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -140,11 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Liane_2\\Anaconda3\\lib\\site-packages\\nltk\\twitter\\__init__.py:20: UserWarning: The twython library has not been installed. Some functionality from the twitter package will not be available.\n",
+      "  warnings.warn(\"The twython library has not been installed. \"\n"
+     ]
+    }
+   ],
    "source": [
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "sentim_int_analyzer = SentimentIntensityAnalyzer()\n",
