negprob feature vector added

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -221,11 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 3, 0, 2, 4, 1, 5, 0]\n",
+      "111009\n"
+     ]
+    }
+   ],
    "source": [
     "# delete later\n",
     "print(sentiments_afinn[0:8])\n",
@@ -234,11 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.232, 0.768, 0.0], [0.135, 0.865, 0.0], [0.142, 0.858, 0.0], [0.03, 0.97, 0.0], [0.11, 0.89, 0.0], [0.076, 0.924, 0.0], [0.177, 0.823, 0.0], [0.07, 0.93, 0.0]]\n",
+      "111009\n"
+     ]
+    }
+   ],
    "source": [
     "# delete later\n",
     "print(sentiments_vader[0:8])\n",
@@ -254,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -274,6 +292,48 @@
    "source": [
     "with open('sentiment_probabilities.json', 'w') as outfile:\n",
     "    json.dump(sentiments_vader, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "negs = sentiment_probs[:,1].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111009\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(negs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('sentiment_probabilities_negative.json', 'w') as outfile:\n",
+    "    json.dump(negs, outfile)"
    ]
   },
   {
@@ -308,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -320,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -468,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -689,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -710,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -725,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -736,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
