--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -749,13 +749,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "max_seq_len = 20\n",
+    "MAX_SEQUENCE_LENGTH = 20\n",
     "embedding_depth = 300"
    ]
   },
@@ -918,6 +918,137 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def normalize(word):\n",
+    "    \"\"\"\n",
+    "    Returns a lower cased version of a word and removes\n",
+    "    punctuation.\n",
+    "    \"\"\"\n",
+    "    return word.lower().strip(string.punctuation)\n",
+    "\n",
+    "def to_vector(word):\n",
+    "    \"\"\"\n",
+    "    Convert a word to vector if we have a vector representation.\n",
+    "    \"\"\"\n",
+    "    if word in embedding_dict:\n",
+    "        return embedding_dict[word]\n",
+    "    else:\n",
+    "        return np.zeros(300, dtype=float)\n",
+    "    \n",
+    "def tokenize(sentence):\n",
+    "    '''\n",
+    "    Converts string sentence into list of words. Strips punctuation,\n",
+    "    removes long words, makes lower case.\n",
+    "    '''\n",
+    "    tokens = []\n",
+    "    for token in tokenizer.tokenize(sentence):\n",
+    "        word = normalize(token)\n",
+    "        if word not in stopwords and len(word)<MAX_SEQUENCE_LENGTH:\n",
+    "            tokens.append(word)\n",
+    "    return tokens\n",
+    "\n",
+    "def sentence_to_vec(sentence):\n",
+    "    '''\n",
+    "    Converts sentence into a float matrix = list of word vectors.\n",
+    "    '''\n",
+    "    import numpy as np\n",
+    "    z = np.zeros([300,])\n",
+    "    sentence_matrix = [to_vector(token) for token in tokenize(sentence)]\n",
+    "    padding = MAX_SEQUENCE_LENGTH - len(sentence_matrix)\n",
+    "    if padding >= 0:\n",
+    "        for i in range(0,padding):\n",
+    "            sentence_matrix.append(z)\n",
+    "    else:\n",
+    "        sentence_matrix = sentence_matrix[:MAX_SEQUENCE_LENGTH]\n",
+    "    return np.array(sentence_matrix)\n",
+    "\n",
+    "def sentences_to_vecs(sentences):\n",
+    "    '''\n",
+    "    Converts list of sentences into list of sentence embeddings, \n",
+    "    each embedding is MAX_SEQUENCE_LENGTH x 300.\n",
+    "    '''\n",
+    "    training_data = [sentence_to_vec(sentence) for sentence in sentences]\n",
+    "    return np.array(training_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "embedded_sentences = sentences_to_vecs(descriptions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(embedded_sentences))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(111009, 20, 300)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(embedded_sentences.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save('embedded.npy', embedded_sentences) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "embedded_sentences = np.load('embedded.npy')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -931,7 +1062,129 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def dynamic_weighting_model(embedding_depth, max_seq_len, num_algs):\n",
+    "    '''\n",
+    "    Returns a model for sentiment analysis algorithm weight learning.\n",
+    "    Model inputs: array of sentence vectors (dimensions: sentences x 22 x 300), \n",
+    "                  array of sentiment guesses for each algorithm (dimensions: sentences x algorithms x 3)\n",
+    "          outputs: array of sentiment answers (dimensions: sentences x 3)\n",
+    "    '''\n",
+    "    # add input layers\n",
+    "    main_input = Input(shape=(max_seq_len,embedding_depth), dtype='float32', name='main_input')\n",
+    "    algs_input = Input(shape=(num_algs,3), dtype='float32', name='algs_input')\n",
+    "    \n",
+    "    lstm = LSTM(300)\n",
+    "    lstm_main = lstm(main_input)\n",
+    "    \n",
+    "    dense_nn = Dense(num_algs, activation='softmax')\n",
+    "    dense_nn_main = dense_nn(lstm_main)\n",
+    "    \n",
+    "    # attention weighting\n",
+    "    dot = Dot(1)\n",
+    "    dot_main = dot([dense_nn_main,algs_input])\n",
+    "        \n",
+    "    # main model\n",
+    "    main_model = Model(inputs=[main_input,algs_input], outputs=[dot_main])\n",
+    "    op = RMSprop(lr=0.00007)\n",
+    "    main_model.compile(optimizer=op, loss='binary_crossentropy')\n",
+    "    \n",
+    "    return main_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'keras'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-66-6df531d7ee31>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mModel\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mActivation\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDot\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mEmbedding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mConv1D\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMaxPooling1D\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMerge\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mHighway\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLSTM\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDense\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDropout\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mReshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mActivityRegularization\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mInput\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimizers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSGD\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mRMSprop\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mregularizers\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconstraints\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnon_neg\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import Sequential, Model\n",
+    "from keras.layers import Activation, Dot, Embedding, Conv1D, MaxPooling1D, Merge, Highway, LSTM, Dense, Dropout, Reshape, ActivityRegularization, Input\n",
+    "from keras.optimizers import SGD, RMSprop\n",
+    "from keras import regularizers\n",
+    "from keras.constraints import non_neg\n",
+    "from keras.initializers import TruncatedNormal\n",
+    "\n",
+    "def descriptions_to_price(embedding_depth, max_seq_len):\n",
+    "    '''\n",
+    "    Returns a model for sentiment analysis algorithm weight learning.\n",
+    "    Model inputs: array of sentence vectors (dimensions: sentences x 22 x 300), \n",
+    "                  array of sentiment guesses for each algorithm (dimensions: sentences x algorithms x 3)\n",
+    "          outputs: array of sentiment answers (dimensions: sentences x 3)\n",
+    "    '''\n",
+    "    # add input layers\n",
+    "    main_input = Input(shape=(max_seq_len,embedding_depth), dtype='float32', name='main_input')\n",
+    "#     price_input = Input(shape=(1), dtype='float32', name='price_input')\n",
+    "    \n",
+    "    lstm = LSTM(300)\n",
+    "    lstm_main = lstm(main_input)\n",
+    "    \n",
+    "    dense_nn = Dense(1, activation='softmax')\n",
+    "    dense_nn_main = dense_nn(lstm_main)\n",
+    "    \n",
+    "    # attention weighting\n",
+    "#     dot = Dot(1)\n",
+    "#     dot_main = dot([dense_nn_main,algs_input])\n",
+    "        \n",
+    "    # main model\n",
+    "    main_model = Model(inputs=[main_input], outputs=[dense_nn_main])\n",
+    "    op = RMSprop(lr=0.00007)\n",
+    "    main_model.compile(optimizer=op, loss='binary_crossentropy')\n",
+    "    \n",
+    "    return main_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'descriptions_to_price' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-68-ee19ef0f2db5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;31m#build/compile model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdescriptions_to_price\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0membedding_depth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMAX_SEQUENCE_LENGTH\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[1;31m#view model summary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'descriptions_to_price' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#build/compile model\n",
+    "model = descriptions_to_price(embedding_depth, MAX_SEQUENCE_LENGTH)\n",
+    "\n",
+    "#view model summary\n",
+    "print (model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "history = model.fit([embedded_sentences], prices, batch_size=128, epochs=5, verbose=2, validation_split=0.15)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -947,7 +1200,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# use the model to make predictions on unseen data\n",
+    "model.predict([\"this wine has beautiful flavors\"])"
+   ]
   }
  ],
  "metadata": {
